--- a/app/views/owners/index.erb
+++ b/app/views/owners/index.erb
@@ -1,1 +1,19 @@
-index.erb
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
+    <%@owners.each do |owner|%>
+      <h1><ul><%= owner.name %></ul></h1>
+      <br>
+      <li><%= owner.pets %></li>
+      <br>
+      <br>
+    <%end%>
+
+
+  </body>
+</html>
