--- a/app/views/pets/index.erb
+++ b/app/views/pets/index.erb
@@ -1,1 +1,18 @@
-index.erb
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
+    <%@pets.each do |pet|%>
+      <h1><ul><%= pet.name %></ul></h1>
+      <br>
+      <li><%= pet.owner %></li>
+      <br>
+      <br>
+  <%end%>
+
+  </body>
+</html>
