--- a/app/views/owners/new.erb
+++ b/app/views/owners/new.erb
@@ -21,8 +21,8 @@
 
     <label>and/or, create a new pet:</label>
     <br>
-    <label>name:</label>
-      <input  type="text" name='pet[name]'></input>
+    <label>Name:</label>
+      <input  type="text" name='pet[name]'>
     <br>
   <input type="submit" value="Create Owner">
 </form>
