--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,12 +1,11 @@
-<h1>Update Owner</h1>
+<h1>Update Pet</h1>
 
 <form action="/pets/<%=@pet.id%>" method="POST">
   <input id="hidden" type="hidden" name="_method" value="patch">
+  <br>
   <label>Name:</label>
 
-  <br>
-
-  <input type="text" name="pet[name]" id="pet_name" value="<%=@pet.name%>">
+  <input type="text" name="pet_name" id="pet_name" value="<%=@pet.name%>">
 
   <br>
 
