--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -1,7 +1,5 @@
 <h1><%=@pet.name%></h1>
-<h4>Pets:</h4>
+<h4>Owners:</h4>
 <ul>
-  <%@pet.owner.each do |owner|%>
-  <li><%=owner.name%></li>
-  <%end%>
+  <%@pet.owner.name%>
 </ul>
