--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -5,7 +5,7 @@
 
   <br>
 
-  <input type="text" name="pet[name]" id='pet_name' value="name">
+  <input type="text" name="pet[name]" id="pet_name">
 
   <br>
 
@@ -13,7 +13,7 @@
 
   <br>
 
-  <%@owners.each do |owner|%>
+  <% @owners.each do |owner| %>
     <input type="checkbox" name="pet[owner_id]" id="<%=owner.id%>" value="<%=owner.id%>"><%=owner.name%></input>
   <%end%>
 
@@ -21,8 +21,8 @@
 
     <label>and/or, create a new owner:</label>
     <br>
-    <label>name:</label>
-      <input  type="text" name='owner[name]' id='owner_name'</input>
+    <label>Name:</label>
+      <input  type="text" name='owner[name]' id='owner_name'>
     <br>
   <input type="submit" value="Create Pet">
 </form>
