--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -1,5 +1,9 @@
 <h1><%=@pet.name%></h1>
-<h4>Owners:</h4>
+<h2>Owners:</h2>
 <ul>
-  <%@pet.owner.name%>
+  <% if @pet.owner %>
+    <h2>Owner: <%=@pet.owner.name%></h2>
+  <% else %>
+    <h3>This pet has no owner.</h3>
+  <% end %>
 </ul>
