--- a/app/views/owners/new.erb
+++ b/app/views/owners/new.erb
@@ -10,8 +10,8 @@
   <br>
 
   <%@pets.each do |pet|%>
-    <input type="checkbox" name="owner[pets_ids][]" value="<%pet.id%>"> id="<%pet.id%>"/>
-    <%=pet.name%></input>
+    <input type="checkbox" name="owner[pets_ids][]" value="<%pet.id%>" id="<%pet.id%>"/>
+    <%=pet.name%>
   <%end%>
 
   <br>
