--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -1,3 +1,33 @@
 <h1>Update Pet</h1>
 
+<form action="/pets/<%=@pet.id%>" method="POST">
+  <input type="hidden" id="hidden" name="_method" value="patch">
+
+  <label>Name:</label>
+
+  <br>
+
+  <input type="text" id="pet_name" name="pet[name]" value="<%=@pet.name%>">
+
+  <br>
+
+  <label>Choose an existing owner:</label>
+
+  <br>
+
+  <%@owners.each do |owner|%>
+    <input type="radio" name="pet[owner_id]" id="<%= owner.id %>" value="<%=owner.id%>" <%='checked' if @pet.owner == owner %>><%=owner.name%></input>
+  <%end%>
+
+  <br>
+  <label>and/or, create a new owner:</label>
+  <br>
+  <label>name:</label>
+  <input type="text" name="owner[name]" id="owner_name"></input>
+  <br>
+
+  <input type="submit" id="submit" name="update_pet" value="Update Pet">
+
+</form>
+
 
